[package]
name = "ipcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0"
ipnetwork = "0.19.0"

[profile.release]
opt-level = "z" # Optimize for size
lto = true     # Enable link-time optimization

[target.x86_64-unknown-linux-gnu]
runner = "cross run --target x86_64-unknown-linux-gnu --image ghcr.io/cross-rs/x86_64-unknown-linux-gnu:latest"